build.log.txt
Generating code snapshot in ./llms.txt ...
╭───────────────────────────────────── CodeToPrompt ──────────────────────────────────────╮
│ Configuration for this run:                                                             │
│ Root Directory: /Users/adam/Developer/vcs/github.twardoch/pub/svgn                      │
│ Include Patterns: ['*']                                                                 │
│ Exclude Patterns: ['*.svg', '.specstory', '*.md', '*.txt', 'ref', 'testdata', '*.lock'] │
│ Respect .gitignore: True                                                                │
│ Show Line Numbers: False                                                                │
│ Count Tokens: True                                                                      │
│ Compress Code: True                                                                     │
│ Max Tokens: Unlimited                                                                   │
│ Tree Depth: 5                                                                           │
│ Output Format: default                                                                  │
│ Interactive Mode: False                                                                 │
╰─────────────────────────────────────────────────────────────────────────────────────────╯

╭──────────────────────── Processing Complete ────────────────────────╮
│ Summary:                                                            │
│ Files Processed: 107                                                │
│ Total Tokens: 67,257                                                │
│ Output Destination: llms.txt                                        │
│                                                                     │
│ Top 3 Files by Tokens:                                              │
│   - svgn/src/collections.rs (5,362 tokens)                          │
│   - svgn/src/plugins/remove_unknowns_and_defaults.rs (4,955 tokens) │
│   - svgn/src/plugins/cleanup_list_of_values.rs (3,957 tokens)       │
│                                                                     │
│ Top 5 Extensions by Tokens:                                         │
│   - .rs (51,347 tokens)                                             │
│   - .sh (6,130 tokens)                                              │
│   - .yml (2,953 tokens)                                             │
│   - .bak (2,786 tokens)                                             │
│   - .cmd (2,652 tokens)                                             │
╰─────────────────────────────────────────────────────────────────────╯
Building the svgn project...
   Compiling svgn v1.2.3 (/Users/adam/Developer/vcs/github.twardoch/pub/svgn/svgn)
error[E0432]: unresolved import `selectors::parser::SelectorParser`
  --> svgn/src/plugins/remove_attributes_by_selector.rs:15:5
   |
15 | use selectors::parser::SelectorParser;
   |     ^^^^^^^^^^^^^^^^^^^--------------
   |     |                  |
   |     |                  help: a similar name exists in the module: `SelectorParseError`
   |     no `SelectorParser` in `parser`

error[E0405]: cannot find trait `SelectorParser` in module `selectors::parser`
   --> svgn/src/plugins/remove_attributes_by_selector.rs:504:41
    |
504 |             impl<'i> selectors::parser::SelectorParser<'i> for DummyParser {
    |                                         ^^^^^^^^^^^^^^ not found in `selectors::parser`

warning: unused import: `element_matches_selector`
  --> svgn/src/plugins/inline_styles.rs:32:66
   |
32 | use inline_styles_selector::{SvgSelectorImpl, SvgElementWrapper, element_matches_selector, walk_element_tree_with_parent};
   |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

Some errors have detailed explanations: E0405, E0432.
For more information about an error, try `rustc --explain E0405`.
warning: `svgn` (lib) generated 1 warning
error: could not compile `svgn` (lib) due to 2 previous errors; 1 warning emitted
